apps/media/arr/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
  labels:
    name: arr-stack
    app.kubernetes.io/name: arr-stack
    app.kubernetes.io/part-of: media
