apps/media/arr/manifests/unpackerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  namespace: arr-stack
  labels:
    app: unpackerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpackerr
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      containers:
      - name: unpackerr
        image: ghcr.io/unpackerr/unpackerr:v0.16.1
        imagePullPolicy: IfNotPresent
        
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        
        volumeMounts:
        - name: nfs-media-volume
          mountPath: /data 
          
      volumes:
      - name: nfs-media-volume
        nfs:
          server: nas.internal
          path: "/mnt/birdpool/jellyfin/media"
          readOnly: false
