apps/media/arr/manifests/lidatube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidatube-deployment
  namespace: arr-stack
  labels:
    app: lidatube
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidatube
  template:
    metadata:
      labels:
        app: lidatube
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - kube-vm
      containers:
      - name: lidatube
        image: thewicklowwolf/lidatube:0.2.56
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        volumeMounts:
        - name: config-storage
          mountPath: /lidatube/config
        - name: downloads-storage
          mountPath: /lidatube/downloads
      volumes:
      - name: config-storage
        persistentVolumeClaim:
          claimName: lidatube-config-pvc-nfs
      - name: downloads-storage
        nfs:
          server: nas.internal
          path: /mnt/birdpool/jellyfin/media/itunes
---
apiVersion: v1
kind: Service
metadata:
  name: lidatube-service
  namespace: arr-stack
  labels:
    app: lidatube
spec:
  type: ClusterIP 
  selector:
    app: lidatube
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidatube-ingress
  namespace: arr-stack
  labels:
    app: lidatube
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-forwardauth@kubernetescrd,arr-stack-arr-frames@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Lidatube"
    gethomepage.dev/group: "Arr"
    gethomepage.dev/icon: "youtube.png"
    gethomepage.dev/description: "YouTube Media Downloader"
spec:
  rules:
  - host: lidatube.wrenspace.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidatube-service
            port:
              number: 5000
